// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/SmallModal With Dangerous Content 1`] = `
<div
  className="max-w-md md:px-0 max-h-[calc(100vh-32px)] overflow-y-auto"
>
  <div
    className="bg-white border border-gray-200 shadow p-4 sm:p-8 flex flex-col gap-8 place-content-between"
    style={
      Object {
        "minHeight": 360,
      }
    }
  >
    <div>
      <h1
        className="text-3xl font-bold font-headline m-0 mb-4 text-error-500"
      >
        Bitte bestätige die Löschung deines Accounts
      </h1>
      <p>
        Dein Account wird undwiederruflich gelöscht. Alle deine Projekte und Daten werden von der Platform und aus der Datenbank entfernt.
      </p>
    </div>
    <div
      className="flex gap-4 place-content-between"
    >
      <div
        className="block w-full text-right"
      >
        <button
          className="inline-block font-headline transition text-base sm:text-lg rounded-none px-3 sm:px-4 py-1.5 sm:py-2 cursor-pointer focus-offset focus:ring-error text-error hover:bg-error hover:bg-opacity-10 mr-4"
          type="button"
          variant="dangerous"
        >
          Löschen
        </button>
        <button
          className="inline-block font-headline transition text-base sm:text-lg rounded-none px-3 sm:px-4 py-1.5 sm:py-2 cursor-pointer focus-offset focus:ring-green bg-purple text-white font-bold hover:bg-blue hover:text-green"
          type="button"
          variant="primary"
        >
          Abbrechen
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI Elements/SmallModal With Footer Content 1`] = `
<div
  className="max-w-md md:px-0 max-h-[calc(100vh-32px)] overflow-y-auto"
>
  <div
    className="bg-white border border-gray-200 shadow p-4 sm:p-8 flex flex-col gap-8 place-content-between"
    style={
      Object {
        "minHeight": 360,
      }
    }
  >
    <div>
      <h1
        className="text-3xl font-bold font-headline m-0 mb-4 text-purple"
      >
        Willkommen!
      </h1>
      <div>
        Du bist eingeloggt als:
        <div
          className="mt-1"
        >
          <span
            className="mr-1.5 inline-block align-middle rounded-full border border-gray-50"
            role="img"
            style={
              Object {
                "height": 25,
                "width": 25,
              }
            }
          >
            <svg
              colors={
                Array [
                  "#F9FCFD",
                  "#0000C2",
                  "#0000C2",
                  "#0000C2",
                  "#100C53",
                  "#46ECA1",
                  "#46ECA1",
                  "#46ECA1",
                  "#8330FF",
                  "#8330FF",
                  "#8330FF",
                  "#F2F3F8",
                  "#E7EAF2",
                  "#CFD0DC",
                  "#B4B4C7",
                  "#9695AE",
                  "#787696",
                  "#636188",
                  "#4A4878",
                  "#332F66",
                  "#1E1A5A",
                ]
              }
              fill="none"
              height={24}
              name="User"
              size={24}
              viewBox="0 0 80 80"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <mask
                height={80}
                id="mask0"
                mask-type="alpha"
                maskUnits="userSpaceOnUse"
                width={80}
                x={0}
                y={0}
              >
                <circle
                  cx={40}
                  cy={40}
                  fill="white"
                  r={40}
                />
              </mask>
              <g
                mask="url(#mask0)"
              >
                <rect
                  fill="#E7EAF2"
                  height={10}
                  width={10}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={20}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={40}
                />
                <rect
                  fill="#9695AE"
                  height={10}
                  width={10}
                  x={60}
                />
                <rect
                  fill="#46ECA1"
                  height={10}
                  width={10}
                  x={10}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={30}
                />
                <rect
                  fill="#787696"
                  height={10}
                  width={10}
                  x={50}
                />
                <rect
                  fill="#9695AE"
                  height={10}
                  width={10}
                  x={70}
                />
                <rect
                  fill="#787696"
                  height={10}
                  width={10}
                  y={10}
                />
                <rect
                  fill="#332F66"
                  height={10}
                  width={10}
                  y={20}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  y={30}
                />
                <rect
                  fill="#46ECA1"
                  height={10}
                  width={10}
                  y={40}
                />
                <rect
                  fill="#9695AE"
                  height={10}
                  width={10}
                  y={50}
                />
                <rect
                  fill="#100C53"
                  height={10}
                  width={10}
                  y={60}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  y={70}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={20}
                  y={10}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={20}
                  y={20}
                />
                <rect
                  fill="#100C53"
                  height={10}
                  width={10}
                  x={20}
                  y={30}
                />
                <rect
                  fill="#E7EAF2"
                  height={10}
                  width={10}
                  x={20}
                  y={40}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={20}
                  y={50}
                />
                <rect
                  fill="#332F66"
                  height={10}
                  width={10}
                  x={20}
                  y={60}
                />
                <rect
                  fill="#46ECA1"
                  height={10}
                  width={10}
                  x={20}
                  y={70}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={40}
                  y={10}
                />
                <rect
                  fill="#332F66"
                  height={10}
                  width={10}
                  x={40}
                  y={20}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={40}
                  y={30}
                />
                <rect
                  fill="#B4B4C7"
                  height={10}
                  width={10}
                  x={40}
                  y={40}
                />
                <rect
                  fill="#100C53"
                  height={10}
                  width={10}
                  x={40}
                  y={50}
                />
                <rect
                  fill="#9695AE"
                  height={10}
                  width={10}
                  x={40}
                  y={60}
                />
                <rect
                  fill="#46ECA1"
                  height={10}
                  width={10}
                  x={40}
                  y={70}
                />
                <rect
                  fill="#787696"
                  height={10}
                  width={10}
                  x={60}
                  y={10}
                />
                <rect
                  fill="#46ECA1"
                  height={10}
                  width={10}
                  x={60}
                  y={20}
                />
                <rect
                  fill="#332F66"
                  height={10}
                  width={10}
                  x={60}
                  y={30}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={60}
                  y={40}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={60}
                  y={50}
                />
                <rect
                  fill="#4A4878"
                  height={10}
                  width={10}
                  x={60}
                  y={60}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={60}
                  y={70}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={10}
                  y={10}
                />
                <rect
                  fill="#9695AE"
                  height={10}
                  width={10}
                  x={10}
                  y={20}
                />
                <rect
                  fill="#46ECA1"
                  height={10}
                  width={10}
                  x={10}
                  y={30}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={10}
                  y={40}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={10}
                  y={50}
                />
                <rect
                  fill="#787696"
                  height={10}
                  width={10}
                  x={10}
                  y={60}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={10}
                  y={70}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={30}
                  y={10}
                />
                <rect
                  fill="#787696"
                  height={10}
                  width={10}
                  x={30}
                  y={20}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={30}
                  y={30}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={30}
                  y={40}
                />
                <rect
                  fill="#CFD0DC"
                  height={10}
                  width={10}
                  x={30}
                  y={50}
                />
                <rect
                  fill="#46ECA1"
                  height={10}
                  width={10}
                  x={30}
                  y={60}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={30}
                  y={70}
                />
                <rect
                  fill="#787696"
                  height={10}
                  width={10}
                  x={50}
                  y={10}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={50}
                  y={20}
                />
                <rect
                  fill="#100C53"
                  height={10}
                  width={10}
                  x={50}
                  y={30}
                />
                <rect
                  fill="#332F66"
                  height={10}
                  width={10}
                  x={50}
                  y={40}
                />
                <rect
                  fill="#CFD0DC"
                  height={10}
                  width={10}
                  x={50}
                  y={50}
                />
                <rect
                  fill="#46ECA1"
                  height={10}
                  width={10}
                  x={50}
                  y={60}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={50}
                  y={70}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={70}
                  y={10}
                />
                <rect
                  fill="#4A4878"
                  height={10}
                  width={10}
                  x={70}
                  y={20}
                />
                <rect
                  fill="#CFD0DC"
                  height={10}
                  width={10}
                  x={70}
                  y={30}
                />
                <rect
                  fill="#8330FF"
                  height={10}
                  width={10}
                  x={70}
                  y={40}
                />
                <rect
                  fill="#0000C2"
                  height={10}
                  width={10}
                  x={70}
                  y={50}
                />
                <rect
                  fill="#332F66"
                  height={10}
                  width={10}
                  x={70}
                  y={60}
                />
                <rect
                  fill="#B4B4C7"
                  height={10}
                  width={10}
                  x={70}
                  y={70}
                />
              </g>
            </svg>
          </span>
          <span
            className="text-gray-400"
          >
            user@usermail.com
          </span>
        </div>
      </div>
    </div>
    <div
      className="flex gap-4 place-content-between"
    >
      <div
        className="block w-full text-right"
      >
        <button
          className="inline-block font-headline transition text-base sm:text-lg rounded-none px-3 sm:px-4 py-1.5 sm:py-2 cursor-pointer focus-offset focus:ring-green bg-purple text-white font-bold hover:bg-blue hover:text-green"
          type="button"
          variant="primary"
        >
          Dein Profil
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI Elements/SmallModal Without Footer Content 1`] = `
<div
  className="max-w-md md:px-0 max-h-[calc(100vh-32px)] overflow-y-auto"
>
  <div
    className="bg-white border border-gray-200 shadow p-4 sm:p-8 flex flex-col gap-8 place-content-between"
    style={
      Object {
        "minHeight": 360,
      }
    }
  >
    <div>
      <h1
        className="text-3xl font-bold font-headline m-0 mb-4 text-purple"
      >
        Gehe zu deinen E-Mails
      </h1>
      <p>
        Wir haben dir eine E-Mail mit einem Anmeldungs-Link geschickt. Klicke den Link an, um dich einzuloggen.
        <br />
        <br />
        Bitte überprüfe auch Deinen Spam-Ordner..
      </p>
    </div>
  </div>
</div>
`;
